test/inference/bad/typeclass_use.mle
class H 'a { x : int }
let [ H 'a ] (main : int) = x[]